# specialbibs

./: .gitignore  README.md  __init__.py  bibs_coisas.py  example.py  main.py  measurements.py  pyproject.toml  simulated_measurement.txt  specialbibs.py  test.py  teste.py
instruments/: __init__.py  instruments.py  keithley.py  labjack.py  pressure.py  visa.py
simulated_measurement/: measurement1.txt  measurement2.txt
specialbibs/: __init__.py  measurements.py  mplt_test.py
specialbibs/instruments/: __init__.py  instruments.py  keithley.py  pressure.py
src/specialbibs/: measurements.py  plotting.py
src/specialbibs/instruments/: __init__.py  dmm.py  instruments.py  keithley.py  pressure.py
