[project]
name = "specialbibs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "np>=1.0.2",
    "numpy>=2.4.3",
    "pyvisa>=1.16.2",
    "pyvisa-py>=0.8.1",
]


[tool.basedpyright]
typeCheckingMode = "standard"
